--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe width="100%" height="1200" frameborder="0"
+<iframe width="100%" height="100%" frameborder="0"
   src="https://observablehq.com/embed/ca83aba5d1fc094c@30?cell=*&api_key=dc94cfdbc5d2e23cac2554a1015bdd7d972d54c1"></iframe>
