--- a/index.html
+++ b/index.html
@@ -1,2 +1,26 @@
-<iframe width="100%" height="100%" frameborder="0"
-  src="https://observablehq.com/embed/ca83aba5d1fc094c@30?cell=*&api_key=dc94cfdbc5d2e23cac2554a1015bdd7d972d54c1"></iframe>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
+
+body {
+  max-width: 960px;
+  margin: 1em auto;
+  padding: 0 1em;
+  font-family: sans-serif;
+}
+
+a:link:not(:hover) {
+  text-decoration: none;
+}
+
+</style>
+
+<div id="observablehq-ca90a0e4"></div>
+<p>Credit: <a href="https://observablehq.com/d/ca83aba5d1fc094c">Plot World Map by Hanxi Wang&#039;s Workspace</a></p>
+
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+<script type="module">
+import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4&api_key=dea0c5373eb5b5dd57fae0d24f8f825c1977efe0";
+new Runtime().module(define, Inspector.into("#observablehq-ca90a0e4"));
+</script>
