--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@ a:link:not(:hover) {
 
 </style>
 
-<div id="observablehq-ca90a0e4"></div>
-
 <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
 import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4&api_key=dea0c5373eb5b5dd57fae0d24f8f825c1977efe0";
-new Runtime().module(define, Inspector.into("#observablehq-ca90a0e4"));
+const runtime = new Runtime();
+const main = runtime.module(define, Inspector.into
+new Runtime().module(define, Inspector.into("#land"));
 </script>
