--- a/index.html
+++ b/index.html
@@ -20,5 +20,5 @@ import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/run
 import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4&api_key=dea0c5373eb5b5dd57fae0d24f8f825c1977efe0";
 const runtime = new Runtime();
 const main = runtime.module(define, Inspector.into
-new Runtime().module(define, Inspector.into("#land"));
+new Runtime().module(define, Inspector.into(document.body));
 </script>
