--- a/index.html
+++ b/index.html
@@ -19,6 +19,5 @@ a:link:not(:hover) {
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
 import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4&api_key=dea0c5373eb5b5dd57fae0d24f8f825c1977efe0";
 const runtime = new Runtime();
-const main = runtime.module(define, Inspector.into
-new Runtime().module(define, Inspector.into(document.body));
+const main = runtime.module(define, Inspector.into(document.body));
 </script>
