--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@ a:link:not(:hover) {
 <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
 import notebook from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4&api_key=dea0c5373eb5b5dd57fae0d24f8f825c1977efe0";
-const land = document.querySelector("#land");
-  const runtime = new Runtime();
+const runtime = new Runtime();
 const main = runtime.module(notebook, name=> {
-  if (name === "land") {
-    return new Inspector(land);
+  if (name === "chart") {
+    return new Inspector(chart);
   }
 });
 </script>
