--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/run
 import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4";
 new Runtime().module(define, name => {
   if (name === "chart") {
-    return new Inspector(document.querySelector("#chart));
+    return new Inspector(document.querySelector("#observablehq-chart-e7655f84"));
                                                 }
 });
 </script>
