--- a/index.html
+++ b/index.html
@@ -1,28 +1,2 @@
-<!DOCTYPE html>
-<meta charset="utf-8">
-<style>
-
-body {
-  max-width: 960px;
-  margin: 1em auto;
-  padding: 0 1em;
-  font-family: sans-serif;
-}
-
-a:link:not(:hover) {
-  text-decoration: none;
-}
-
-</style>
-
-<div id="observablehq-cfe751ee"></div>
-
-<script type="module">
-import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4";
-new Runtime().module(define, name => {
-  if (name === "chart") {
-    return new Inspector(document.querySelector("#observablehq-chart-e7655f84"));
-                                                }
-});
-</script>
+<iframe width="100%" height="453" frameborder="0"
+  src="https://observablehq.com/embed/ca83aba5d1fc094c?cells=chart"></iframe>
