--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
-<div id="observablehq-chart-e40a4cb4"></div>
+<div id="observablehq-chart-6443e95d"></div>
+
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/ca83aba5d1fc094c.js?v=4";
+import define from "https://api.observablehq.com/d/ca83aba5d1fc094c@67.js?v=4";
 new Runtime().module(define, name => {
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-e40a4cb4"));
+  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-6443e95d"));
 });
 </script>
