--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<div id="observablehq-chart-6443e95d"></div>
+<div id="observablehq-chart-67201ecd"></div>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/ca83aba5d1fc094c@67.js?v=4";
+import define from "https://api.observablehq.com/d/a4feb8b518b0da9a.js?v=4&api_key=674009e8310062e01da268867d977f3c276ed4de";
 new Runtime().module(define, name => {
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-6443e95d"));
+  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-67201ecd"));
 });
 </script>
