--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
-<div id="observablehq-chart-67201ecd"></div>
+<!DOCTYPE html>
+<meta charset="utf-8">
+<style>
 
+body {
+  max-width: 960px;
+  margin: 1em auto;
+  padding: 0 1em;
+  font-family: sans-serif;
+}
+
+a:link:not(:hover) {
+  text-decoration: none;
+}
+
+</style>
+
+<div id="observablehq-chart-67201ecd" style="width: 100%;></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
-<script type="module">
+
+  <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
 import define from "https://api.observablehq.com/d/a4feb8b518b0da9a.js?v=4&api_key=674009e8310062e01da268867d977f3c276ed4de";
 new Runtime().module(define, name => {
