--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ a:link:not(:hover) {
 
 </style>
 
-<div id="observablehq-chart-67201ecd" style="width: 100%;></div>
+<div id="observablehq-chart-67201ecd" style="width: 100%;"></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 
   <script type="module">
