--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 </head>
 <body>
 
-	<div><a href="#" target="discourse_network.html"><h1>Discourse Networks<h1></a></div>
+	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
   <div><a href="#" target="_blank"><h1>Social Networks<h1></a></div>
   <div><a href="#" target="_blank"><h1>Geographic Influence<h1></a></div>
 
