--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ body {
 <body>
 
 	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
-  <div><a href="#" target="_blank"><h1>Social Networks<h1></a></div>
-  <div><a href="#" target="_blank"><h1>Geographic Influence<h1></a></div>
+  <div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
+  <div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
 
 </body>
 </html>
