--- a/discourse_network.html
+++ b/discourse_network.html
@@ -1,4 +1,4 @@
-<div id="observablehq-chart-67201ecd" style="width: 100%;"></div>
+<div id="observablehq-chart-67201ecd" style="width: 100%;" style="background-color:black;"></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 
   <script type="module">
