--- a/discourse_network.html
+++ b/discourse_network.html
@@ -1,4 +1,5 @@
-<div id="observablehq-chart-67201ecd" style="width: 100%;" style="background-color:black;"></div>
+<body style="background-color:black;">
+<div id="observablehq-chart-67201ecd" style="width: 100%;"></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 
   <script type="module">
@@ -9,3 +10,4 @@ new Runtime().module(define, name => {
 });
     
 </script>
+</body>
