--- a/social_networks.html
+++ b/social_networks.html
@@ -1,3 +1,4 @@
+<body style="background-color:black">
 <div id="observablehq-chart-b4722878" style="width: 100%;"></div>
 
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
@@ -8,3 +9,4 @@ new Runtime().module(define, name => {
   if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-b4722878"));
 });
 </script>
+</body>
