--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@ body {
   	margin: 1em auto;
   	padding: 0 1em;
   	font-family: Arial Black, sans-serif;
+	background-color: black;
+}
+
+h1 {
+	color: white;
 }
 
 </style>
