--- a/discourse_network.html
+++ b/discourse_network.html
@@ -1,6 +1,17 @@
 <body style="background-color:black;">
 <div id="observablehq-chart-bd3acf6e" style="width: 100%;"></div>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+<style type="text/css">
+  .tooltip {
+    fill: white;
+    font-family: sans-serif;
+    width: 400px;
+    height: 1000px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid grey;
+  }
+</style>
 
   <script type="module">
 import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
