--- a/discourse_network.html
+++ b/discourse_network.html
@@ -6,10 +6,11 @@
     fill: white;
     font-family: sans-serif;
     width: 400px;
-    height: 1000px;
+    height: 100%;
     padding: 5px;
     border-radius: 5px;
     border: 1px solid grey;
+    opacity: 25%;
   }
 </style>
 
