--- a/discourse_network.html
+++ b/discourse_network.html
@@ -5,12 +5,15 @@
   .tooltip {
     fill: white;
     font-family: sans-serif;
+    font-color: white;
     width: 400px;
     height: 100%;
-    padding: 5px;
-    border-radius: 5px;
+    padding: 25px;
     border: 1px solid grey;
     opacity: 25%;
+  }
+  .h2 {
+    font-color: white;
   }
 </style>
 
