--- a/discourse_network.html
+++ b/discourse_network.html
@@ -3,9 +3,9 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <style type="text/css">
   .tooltip {
-    fill: white;
+    fill: rgba(255,255,255,0.25);
     font-family: sans-serif;
-    font-color: white;
+    color: white;
     width: 400px;
     height: 100%;
     padding: 25px;
