--- a/discourse_network.html
+++ b/discourse_network.html
@@ -5,15 +5,12 @@
   .tooltip {
     fill: rgba(255,255,255,0.25);
     font-family: sans-serif;
-    color: white;
+    color: rgba(255,255,255,1);
     width: 400px;
     height: 100%;
     padding: 25px;
     border: 1px solid grey;
     opacity: 25%;
-  }
-  h2 {
-    color: white;
   }
 </style>
 
