--- a/discourse_network.html
+++ b/discourse_network.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
 <style type="text/css">
   .tooltip {
-    fill: rgba(255,255,255,0.25);
+    background: rgba(255,255,255,0.25);
     font-family: sans-serif;
     width: 400px;
     height: 100%;
@@ -13,6 +13,25 @@
   p {
     margin-left: 25px;
   }
+  /* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #262626; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #7d7d7d; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #fff; 
+}
 </style>
 
   <script type="module">
