--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@ h1 {
 <body>
 
 	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
-  <div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
-  <div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
+  	<div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
+  	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
+	<div><a href="geog_interactions.html"><h1>Geographic Interactions<h1></a></div>
 
 </body>
 </html>
