--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -8,15 +8,15 @@
 
 .map-box {
   position: relative;
-  height: 100%;
-  margin: 0px auto;
+  height: 80%;
+  margin-left: 100px;
+  margin-top: 60px;
 }
 
 .bar-chart-box {
   position: absolute;
-  background: lightgray;
-  height: 150px;  
-  width: 70%;
+  height: 300px;  
+  width: 600px;
   left: 50px;
   top: 50px;
 }
