--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -32,7 +32,7 @@
     <div id="observablehq-viewof-k-4db7c16f"></div>
     <div id="observablehq-viewof-mapRotateX-4db7c16f"></div>
     <div id="observablehq-viewof-select-4db7c16f"></div>
-    <div id="observablehq-chart-4db7c16f"></div>
+    <div class="bar-chart-box" id="observablehq-chart-4db7c16f"></div>
     <div id="observablehq-map2-4db7c16f"></div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
