--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -10,7 +10,7 @@
   position: relative;
   height: auto;
   margin-left: 100px;
-  margin-top: 100px;
+  margin-top: 0px;
   margin-bottom: 60px;
 }
 
@@ -27,13 +27,14 @@
 <body>
 
 <div class="container">
-  <div class="map-box">
+  <div class="bar-chart-box">
     <div id="observablehq-viewof-ij-4db7c16f"></div>
     <div id="observablehq-viewof-k-4db7c16f"></div>
     <div id="observablehq-viewof-mapRotateX-4db7c16f"></div>
     <div id="observablehq-viewof-select-4db7c16f"></div>
-    <div class="bar-chart-box" id="observablehq-chart-4db7c16f"></div>
-    <div id="observablehq-map2-4db7c16f"></div>
+    <div id="observablehq-chart-4db7c16f"></div>
+  </div>
+    <div class="map-box" id="observablehq-map2-4db7c16f"></div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
     <script type="module">
