--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -11,7 +11,7 @@
   margin-left: 100px;
   margin-top: 150px;
   margin-bottom: 60px;
-  height: auto;
+  height: 60%;
 }
 
 .bar-chart-box {
@@ -19,7 +19,7 @@
   height: 600px;  
   width: 600px;
   left: 0px;
-  top: 0px;
+  top: -150px;
 }
 
 </style>
