--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -34,7 +34,9 @@
 <body>
 
 <div class="container">
-  <div class="map-box" id="observablehq-map2-4db7c16f"></div>
+  <div class="map-box">
+    <div id="observablehq-map2-4db7c16f" style="width: 50%; margin: 0px auto;"></div>
+  </div>
   <div class="bar-chart-box" id="observablehq-chart-4db7c16f"></div>
   <div class="controls-box">
     <div id="observablehq-viewof-ij-4db7c16f"></div>
