--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -35,7 +35,7 @@
 
 <div class="container">
   <div class="map-box">
-    <div id="observablehq-map2-4db7c16f" style="margin: 0px auto;"></div>
+    <div id="observablehq-map2-4db7c16f" style=" height: 80%; margin: 0px auto;"></div>
   </div>
   <div class="bar-chart-box" id="observablehq-chart-4db7c16f"></div>
   <div class="controls-box">
