--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -21,11 +21,12 @@
 }
 .controls-box {
   position: absolute;
-  background: black;
+  background: red;
   height: 100px;
   width: 300px;
   right: 0px;
-  bottom: 0px;
+  bottom: 0px
+  padding: 10px;
 }
 
 </style>
