--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -22,10 +22,10 @@
 .controls-box {
   position: absolute;
   background: red;
-  height: 130px;
-  width: 330px;
+  height: 110px;
+  width: 350px;
   right: 0px;
-  bottom: 60px
+  bottom: 60px;
   padding: 10px;
 }
 
