--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -25,6 +25,7 @@ body {
 .controls-box {
   position: absolute;
   background: red;
+  color: white;
   height: 110px;
   width: 350px;
   right: 0px;
