--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -24,8 +24,8 @@ body {
 }
 .controls-box {
   position: absolute;
-  background: red;
-  color: white;
+  background: black;
+  color: red;
   height: 110px;
   width: 350px;
   right: 0px;
