--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ h1 {
   	<div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
   	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
 	<div><a href="geog_interactions.html"><h1>Geographic Interactions<h1></a></div>
-	<div><a href="geog_interactions.html"><img src="images/globe.svg" style="width:100px;height:100px;"></a></div>
+	<div><a href="geog_interactions.html"><img src="images/users-alt.png" style="width:100px;height:100px;"></a></div>
 
 </body>
 </html>
