--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <title>Network Tests</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,6 +29,8 @@ h1 {
   	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
 	<div><a href="geog_interactions.html"><h1>Geographic Interactions<h1></a></div>
 	<div><a href="geog_interactions.html"><img src="images/users-alt.png" style="width:100px;height:100px;"></a></div>
+	<div><a href="geog_interactions.html"><img src="users-alt.png" style="width:100px;height:100px;"></a></div>
+	<div><a href="geog_interactions.html"><i class="fi fi-ts-users-alt"></i></a></div>
 
 </body>
 </html>
