--- a/index.html
+++ b/index.html
@@ -27,10 +27,8 @@ h1 {
 	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
   	<div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
   	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
-	<div><a href="geog_interactions.html"><h1>Geographic Interactions<h1></a></div>
-	<div><a href="geog_interactions.html"><img src="images/users-alt.png" style="width:100px;height:100px;"></a></div>
-	<div><a href="geog_interactions.html"><img src="users-alt.png" style="width:100px;height:100px;"></a></div>
-	<div><a href="geog_interactions.html"><i class="fi fi-ts-users-alt"></i></a></div>
+	<div><a href="geog_interactions.html"><h1>Geographic Interactions<i class="fas fa-cloud"></i><h1></a></div>
+	<div><a href="geog_interactions.html"><i class="fas fa-cloud"></i></a></div>
 
 </body>
 </html>
