--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 <title>Network Tests</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -21,9 +20,10 @@ h1 {
 }
 
 </style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-
+	<a href="geog_interactions.html"><i class="material-icons" style="font-size:24px;">cloud</i></a>
 	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
   	<div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
   	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
