--- a/index.html
+++ b/index.html
@@ -23,12 +23,10 @@ h1 {
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-	<a href="geog_interactions.html"><i class="material-icons" style="font-size:24px;">cloud</i></a>
-	<div><a href="discourse_network.html"><h1>Discourse Networks<h1></a></div>
-  	<div><a href="social_networks.html"><h1>Social Networks<h1></a></div>
-  	<div><a href="geographic_influence.html"><h1>Geographic Influence<h1></a></div>
-	<div><a href="geog_interactions.html"><h1>Geographic Interactions<i class="fas fa-cloud"></i><h1></a></div>
-	<div><a href="geog_interactions.html"><i class="fas fa-cloud"></i></a></div>
+	<a href="discourse_network.html"><i class="material-icons" style="font-size:400px;">textsms</i></a>
+	<a href="social_networks.html"><i class="material-icons" style="font-size:400px;">people_outline</i></a>
+	<a href="geog_interactions.html"><i class="material-icons" style="font-size:400px;">public</i></a>
+	<a href="geographic_influence.html"><i class="material-icons" style="font-size:400px;">pie_chart_outlined</i></a>
 
 </body>
 </html>
