--- a/index.html
+++ b/index.html
@@ -7,26 +7,21 @@
 <style>
 
 body {
-	max-width: 960px;
-  	margin: 1em auto;
-  	padding: 0 1em;
+	position: relative;
+  	margin: 0px auto;
+  	padding: 10px;
   	font-family: Arial Black, sans-serif;
 	background-color: black;
-}
-
-h1 {
-	color: white;
-	text-align:center;
 }
 
 </style>
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
-	<a href="discourse_network.html"><i class="material-icons" style="font-size:400px;">textsms</i></a>
-	<a href="social_networks.html"><i class="material-icons" style="font-size:400px;">people_outline</i></a>
-	<a href="geog_interactions.html"><i class="material-icons" style="font-size:400px;">public</i></a>
-	<a href="geographic_influence.html"><i class="material-icons" style="font-size:400px;">pie_chart_outlined</i></a>
+	<a href="discourse_network.html"><i class="material-icons" style="font-size:200px;">textsms</i></a>
+	<a href="social_networks.html"><i class="material-icons" style="font-size:200px;">people_outline</i></a>
+	<a href="geog_interactions.html"><i class="material-icons" style="font-size:200px;">public</i></a>
+	<a href="geographic_influence.html"><i class="material-icons" style="font-size:200px;">pie_chart_outlined</i></a>
 
 </body>
 </html>
