--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
+body {
+	background:black;
+}
 
 .grid-container {
   display: grid;
-  row-gap: 10px;
-  grid-template-columns: auto auto;
+  gap: 10px;
+  grid-template-columns: auto auto auto auto;
   background-color: #fff;
   padding: 10px;
 }
