--- a/index.html
+++ b/index.html
@@ -7,14 +7,19 @@
 <style>
 body {
 	background:black;
+	height: 50%;
+	margin: 0px auto;
 }
 
 .grid-container {
-  display: grid;
-  gap: 10px;
-  grid-template-columns: auto auto auto auto;
-  background-color: #fff;
-  padding: 10px;
+  	display: grid;
+	position: relative;
+	width: 100%;
+	margin:  0px auto;
+  	gap: 10px;
+  	grid-template-columns: auto auto auto auto;
+  	background-color: black;
+  	padding: 10px;
 }
 
 .grid-item {
