--- a/index.html
+++ b/index.html
@@ -13,17 +13,16 @@ body {
 
 .grid-container {
   	display: grid;
-	position: relative;
-	width: 100%;
+	position: absolute;
+	top: 50%;
+	left:50%;
 	margin:  0px auto;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
-  	background-color: black;
   	padding: 10px;
 }
 
 .grid-item {
-  background-color: rgba(255, 255, 255, 0.8);
   padding: 20px;
   font-size: 30px;
   text-align: center;
