--- a/index.html
+++ b/index.html
@@ -7,19 +7,20 @@
 <style>
 body {
 	background:black;
-	height: 50%;
-	margin: 0px auto;
+	font-family: arial, sans-serif;
 }
 
 .grid-container {
   	display: grid;
 	position: absolute;
 	top: 50%;
-	left:50%;
+	left:0%;
 	margin:  0px auto;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
+	-ms-transform: translateY(-50%);
+  	transform: translateY(-50%);
 }
 
 .grid-item {
