--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
   	display: grid;
 	position: absolute;
 	top: 50%;
-	left:0%;
+	left: 50%;
 	margin:  0px auto;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
@@ -31,6 +31,22 @@ body {
 
 p {
 font-size:15px;
+}
+
+a:link {
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:visited {
+	color: red;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:hover {
+	color: red;
+	background-color: transparent;
+	text-decoration: none;
 }
 
 </style>
