--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
   	display: grid;
 	position: absolute;
 	top: 50%;
-	left: 50%;
+	left: 25%;
 	margin:  0px auto;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
@@ -39,7 +39,7 @@ a:link {
 	text-decoration: none;
 }
 a:visited {
-	color: red;
+	color: white;
 	background-color: transparent;
 	text-decoration: none;
 }
