--- a/index.html
+++ b/index.html
@@ -13,14 +13,11 @@ body {
 .grid-container {
   	display: grid;
 	position: absolute;
-	top: 50%;
-	left: 25%;
+	width: 1200px;
 	margin:  0px auto;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
-	-ms-transform: translateY(-50%);
-  	transform: translateY(-50%);
 }
 
 .grid-item {
