--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 
 .grid-container {
   	display: grid;
-	position: absolute;
+	position: relative;
 	width: 1200px;
 	margin:  0px auto;
   	gap: 10px;
