--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@ body {
 
 .grid-container {
   	display: grid;
-	position: relative;
-	width: 1200px;
-	margin:  0px auto;
+	vertical-align: middle;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
