--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ body {
 .grid-container {
   	display: grid;
 	vertical-align: middle;
+	top: 50%;
   	gap: 10px;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
