--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ body {
 .grid-container {
   	display: grid;
 	vertical-align: middle;
-	top: 50%;
-  	gap: 10px;
+	position: relative;
+	height: 100%;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
 }
