--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 body {
 	background:black;
 	font-family: arial, sans-serif;
+	position: relative;
+	height: 100%;
 }
 
 .grid-container {
   	display: grid;
-	vertical-align: middle;
-	position: relative;
-	height: 100%;
+	height: 50%;
+	overflow: auto;
+	margin: auto;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
 }
