--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@ body {
 
 .grid-container {
   	display: grid;
-	height: 50%;
-	overflow: auto;
-	margin: auto;
+	position: absolute;
+	top: 50%;
   	grid-template-columns: auto auto auto auto;
   	padding: 10px;
 }
