--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ body {
   	display: grid;
   	grid-template-columns: auto auto auto auto;
   	padding: 100px;
+	margin-top: 300px;
 }
 
 .grid-item {
