--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
 
 .grid-container {
   	display: grid;
-  	grid-template-columns: auto auto auto auto;
+  	grid-template-columns: auto auto auto;
   	padding: 100px;
 	margin-top: 300px;
 }
@@ -52,8 +52,7 @@ a:hover {
 	<div class="grid-container">
   		<div class="grid-item"><a href="discourse_network.html"><i class="material-icons" style="font-size:50px;">textsms</i><p>discourse network</p></a></div>
   		<div class="grid-item"><a href="social_networks.html"><i class="material-icons" style="font-size:50px;">people_outline</i><p>social network</p></a></div>
-  		<div class="grid-item"><a href="geog_interactions.html"><i class="material-icons" style="font-size:50px;">public</i><p>geographic interactions</p></a></div>  
-  		<div class="grid-item"><a href="geographic_influence.html"><i class="material-icons" style="font-size:50px;">pie_chart_outlined</i><p>geographic distribution</p></a></div> 
+  		<div class="grid-item"><a href="geog_interactions.html"><i class="material-icons" style="font-size:50px;">public</i><p>geographic interactions</p></a></div>   
 	</div>
 </body>
 </html>
