--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -33,6 +33,31 @@ body {
   padding: 10px;
 }
 
+.menu-box {
+  position: absolute;
+  right: 0px;
+  top: -80px;
+  display: grid;
+  grid-template-columns: auto;
+}
+
+a:link {
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:visited {
+	color: white;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:hover {
+	color: red;
+	background-color: transparent;
+	text-decoration: none;
+}
+
+  
 </style>
 </head>
 <body>
@@ -47,6 +72,10 @@ body {
     <div id="observablehq-viewof-k-4db7c16f"></div>
     <div id="observablehq-viewof-mapRotateX-4db7c16f"></div>
     <div id="observablehq-viewof-select-4db7c16f"></div>
+  </div>
+  <div class="menu-box">
+    <a href="index.html"><i class="material-icons" style="font-size:20px;">menu</i></a>
+    <a href="geographic_influence.html"><i class="material-icons" style="font-size:20px;">donut_large</i></a>
   </div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
