--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -36,7 +36,7 @@ body {
 .menu-box {
   position: absolute;
   right: 0px;
-  top: -80px;
+  top: 0px;
   display: grid;
   grid-template-columns: auto;
 }
@@ -59,6 +59,7 @@ a:hover {
 
   
 </style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 
