--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -42,12 +42,12 @@ body {
 }
 
 a:link {
-	color: white;
+	color: black;
 	background-color: transparent;
 	text-decoration: none;
 }
 a:visited {
-	color: white;
+	color: black;
 	background-color: transparent;
 	text-decoration: none;
 }
