--- a/geographic_influence.html
+++ b/geographic_influence.html
@@ -1,10 +1,64 @@
-<div id="observablehq-chart-80c72e72" style="width: 65%; margin: 0px auto;"></div>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  font-family: arial, sans-serif;
+}
+.container {
+  position: relative;
+}
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
-<script type="module">
-import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/501b9307324645a0.js?v=4";
-new Runtime().module(define, name => {
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-80c72e72"));
-});
-</script>
+.map-box {
+  position: relative;
+  margin-left: 0px;
+  margin-top: 80px;
+  margin-bottom: 60px;
+  height: 60%;
+}
+
+.menu-box {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  display: grid;
+  grid-template-columns: auto;
+}
+
+a:link {
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:visited {
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:hover {
+	color: red;
+	background-color: transparent;
+	text-decoration: none;
+}
+  
+</style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
+<body>
+  <div class="map-box">
+    <div id="observablehq-chart-80c72e72" style=" width: 800px; margin: 0px auto;"></div>
+  </div>
+  <div class="menu-box">
+    <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
+    <a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">public</i></a>
+  </div>
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+  <script type="module">
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/501b9307324645a0.js?v=4";
+    new Runtime().module(define, name => {
+      if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-80c72e72"));
+    });
+  </script>
+</body>
