--- a/discourse_network.html
+++ b/discourse_network.html
@@ -1,7 +1,14 @@
-<body style="background-color:black;">
-<div id="observablehq-chart-bd3acf6e" style="width: 100%;"></div>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
-<style type="text/css">
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+  .menu-box {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    display: grid;
+    grid-template-columns: auto;
+  }
   .tooltip {
     background: rgba(255,255,255,0.25);
     font-family: sans-serif;
@@ -31,14 +38,38 @@
 ::-webkit-scrollbar-thumb:hover {
   background: #fff; 
 }
-</style>
 
+a:link {
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:visited {
+	color: black;
+	background-color: transparent;
+	text-decoration: none;
+}
+a:hover {
+	color: red;
+	background-color: transparent;
+	text-decoration: none;
+}
+
+</style>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+</head>
+<body style="background-color:black;">
+<div id="observablehq-chart-bd3acf6e" style="width: 100%;"></div>
+  <div class="menu-box">
+    <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
+    <a href="geographic_influence.html"><i class="material-icons" style="font-size:120px;">donut_large</i></a>
+  </div>
   <script type="module">
-import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-import define from "https://api.observablehq.com/d/4249321b943ac54f.js?v=4&api_key=26c0aedc0c51306ecd119dc46a5769c3cc52d6de";
-new Runtime().module(define, name => {
-  if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-bd3acf6e"));
-});
-    
-</script>
+    import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
+    import define from "https://api.observablehq.com/d/4249321b943ac54f.js?v=4&api_key=26c0aedc0c51306ecd119dc46a5769c3cc52d6de";
+    new Runtime().module(define, name => {
+      if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-bd3acf6e"));
+    });   
+  </script>
 </body>
+</html>
