--- a/discourse_network.html
+++ b/discourse_network.html
@@ -40,12 +40,12 @@
 }
 
 a:link {
-	color: black;
+	color: white;
 	background-color: transparent;
 	text-decoration: none;
 }
 a:visited {
-	color: black;
+	color: white;
 	background-color: transparent;
 	text-decoration: none;
 }
@@ -57,6 +57,7 @@ a:hover {
 
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body style="background-color:black;">
 <div id="observablehq-chart-bd3acf6e" style="width: 100%;"></div>
