--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ a:hover {
 </head>
 <body>
 	<div class="grid-container">
-  		<div class="grid-item"><a href="discourse_network.html"><i class="material-icons" style="font-size:50px;">textsms</i><p>discourse network</p></a></div>
+  		<div class="grid-item"><a href="discourse_network.html"><i class="material-icons" style="font-size:50px;">forum</i><p>discourse network</p></a></div>
   		<div class="grid-item"><a href="social_networks.html"><i class="material-icons" style="font-size:50px;">people_outline</i><p>social network</p></a></div>
   		<div class="grid-item"><a href="geog_interactions.html"><i class="material-icons" style="font-size:50px;">public</i><p>geographic interactions</p></a></div>   
 	</div>
