--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -77,6 +77,7 @@ a:hover {
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
     <a href="geographic_influence.html"><i class="material-icons" style="font-size:120px;">donut_large</i></a>
+	<a href="geog_distribution.html"><i class="material-icons" style="font-size:120px;">view_comfy_alt</i></a>
   </div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
