--- a/social_networks.html
+++ b/social_networks.html
@@ -61,7 +61,7 @@ a:hover {
 </head>
   
 <body style="background-color:black">
-<div id="observablehq-chart-3ada7a4f" style="width: 100%;"></div>
+<div id="observablehq-chart-249d8a0e" style="width: 100%;"></div>
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
     <a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">diversity_3</i></a>
@@ -69,9 +69,9 @@ a:hover {
 
 <script type="module">
   import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
-  import define from "https://api.observablehq.com/d/c130a749e887c9a2.js?v=4";
+  import define from "https://api.observablehq.com/d/1c845f69e79413af@253.js?v=4";
   new Runtime().module(define, name => {
-    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-3ada7a4f"));
+    if (name === "chart") return new Inspector(document.querySelector("#observablehq-chart-249d8a0e"));
   });
 </script>
 </body>
