--- a/geog_distribution.html
+++ b/geog_distribution.html
@@ -67,6 +67,10 @@ a:hover {
   <div class="map-box">
     <div id="observablehq-map2-6d3ecfe9" style=" width: 800px; margin: 0px auto;"></div>
   </div>
+<div class="controls-box">
+	<div id="observablehq-viewof-radios-c683f13b"></div>
+	<div id="observablehq-viewof-mapRotateX-c683f13b"></div>
+  </div>
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
     <a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">call_split</i></a>
