--- a/geog_distribution.html
+++ b/geog_distribution.html
@@ -68,7 +68,8 @@ a:hover {
     <div id="observablehq-map2-ddc46429" style=" width: 800px; margin: 0px auto;"></div>
   </div>
 <div class="controls-box">
-	<div id="observablehq-viewof-radios-ddc46429"></div>
+	<div id="observablehq-viewof-radios-ddc46429" style=" width: 225px"></div>
+	<p> </p>
 	<div id="observablehq-viewof-mapRotateX-ddc46429"></div>
   </div>
   <div class="menu-box">
