--- a/geog_distribution.html
+++ b/geog_distribution.html
@@ -18,9 +18,10 @@ body {
 }
 
 .bar-chart-box {
-  position: absolute;
-  left: 0px;
-  top: -80px;
+  	position: absolute;
+  	left: 0px;
+  	top: -80px;
+	width: 600px;
 }
 .controls-box {
   position: absolute;
