--- a/geog_distribution.html
+++ b/geog_distribution.html
@@ -76,8 +76,9 @@ a:hover {
 	<div id="observablehq-viewof-mapRotateX-8da0f164"></div>
   </div>
   <div class="menu-box">
-    <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    <a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">call_split</i></a>
+    	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
+    	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">call_split</i></a>
+	<a href="social_networks.html"><i class="material-icons" style="font-size:120px;">hub</i></a>
   </div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
