--- a/geog_distribution.html
+++ b/geog_distribution.html
@@ -77,7 +77,7 @@ a:hover {
   </div>
   <div class="menu-box">
     	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">call_split</i></a>
+    	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">supervised_user_circle</i></a>
 	<a href="social_networks.html"><i class="material-icons" style="font-size:120px;">hub</i></a>
   </div>
 
