--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -75,9 +75,9 @@ a:hover {
     <div id="observablehq-viewof-select-4db7c16f"></div>
   </div>
   <div class="menu-box">
-    <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    <a href="geographic_influence.html"><i class="material-icons" style="font-size:120px;">donut_large</i></a>
-	<a href="geog_distribution.html"><i class="material-icons" style="font-size:120px;">view_comfy_alt</i></a>
+    	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
+	<a href="geog_distribution.html"><i class="material-icons" style="font-size:120px;">circles</i></a>
+    	<a href="geographic_influence.html"><i class="material-icons" style="font-size:120px;">donut_large</i></a>
   </div>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@observablehq/inspector@5/dist/inspector.css">
