--- a/geog_interactions.html
+++ b/geog_interactions.html
@@ -76,7 +76,7 @@ a:hover {
   </div>
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    <a href="geographic_influence.html"><i class="material-icons" style="font-size:120px;">donut_large</i></a>
+    <a href="social_networks.html"><i class="material-icons" style="font-size:120px;">hub</i></a>
 	<a href="geog_distribution.html"><i class="material-icons" style="font-size:120px;">bubble_chart</i></a>
   </div>
 
