--- a/social_networks.html
+++ b/social_networks.html
@@ -65,6 +65,7 @@ a:hover {
 <div class="menu-box">
 	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
 	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">supervised_user_circle</i></a>
+	<a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">glyphs</i></a>
 </div>
 
 <script type="module">
