--- a/social_networks.html
+++ b/social_networks.html
@@ -62,10 +62,9 @@ a:hover {
   
 <body style="background-color:black">
 <div id="observablehq-chart-99fa93bd" style="width: 100%;"></div>
-<div class="menu-box">
+<div class="menu-box" style="height: 400px">
 	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
 	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">supervised_user_circle</i></a>
-	<a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">glyphs</i></a>
 </div>
 
 <script type="module">
