--- a/discourse_social.html
+++ b/discourse_social.html
@@ -75,7 +75,8 @@ new Runtime().module(define, name => {
 <div id="observablehq-chart-5c9b11f9" style="width: 100%;"></div>
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    <a href="discourse_network.html"><i class="material-icons" style="font-size:120px;">forum</i></a>
+    <a href="discourse_network.html"><i class="material-icons" style="font-size:120px;">polyline</i></a>
+    <a href="social_networks.html"><i class="material-icons" style="font-size:120px;">hub</i></a>
   </div>
   <script type="module">
     import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
