--- a/discourse_network.html
+++ b/discourse_network.html
@@ -63,7 +63,7 @@ a:hover {
 <div id="observablehq-chart-bd3acf6e" style="width: 100%;"></div>
   <div class="menu-box">
     <a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
-    <a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">diversity_3</i></a>
+    <a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">hub</i></a>
   </div>
   <script type="module">
     import {Runtime, Inspector} from "https://cdn.jsdelivr.net/npm/@observablehq/runtime@5/dist/runtime.js";
