--- a/social_networks.html
+++ b/social_networks.html
@@ -70,7 +70,7 @@ a:hover {
 <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
   
-<body style="background-color:black">
+<body style="background-color:white">
 <div id="observablehq-chart-81301177" style="width: 100%;"></div>
 <div class="menu-box" style="height: 400px">
 	<a href="index.html"><i class="material-icons" style="font-size:120px;">menu</i></a>
