--- a/social_networks.html
+++ b/social_networks.html
@@ -14,7 +14,7 @@
   background: black;
   color: red;
   height: 80px;
-  width: 275px;
+  width: 500px;
   right: 20px;
   bottom: 20px;
   padding: 10px;
@@ -77,7 +77,7 @@ a:hover {
 	<a href="geog_interactions.html"><i class="material-icons" style="font-size:120px;">supervised_user_circle</i></a>
 	<a href="discourse_social.html"><i class="material-icons" style="font-size:120px;">tag</i></a>
 </div>
-<div class="controls-box" style="width: 225px">
+<div class="controls-box">
 	<div id="observablehq-viewof-radios-5f9f9394"></div>
 	<div id="observablehq-viewof-level-5f9f9394"></div>
 </div>
